[0824] share_info 연결 - 일부 url 제외

--- a/share_info/templates/share_info/infodetail.html
+++ b/share_info/templates/share_info/infodetail.html
@@ -16,7 +16,7 @@
           <hr />
         </div>
         <div class="logo">
-          <a href="#">
+          <a href="/">
             <img src="{% static 'image/logo.png' %}" alt="로고" />
           </a>
         </div>
@@ -32,7 +32,7 @@
               </a>
             </div>
           </div>
-          <a href="{% url 'share_info:index' %}">
+          <a href="#">
             <div class="profile">
               <p>MYPAGE</p>
               <img src="{% static 'image/user.png' %}" alt="프로필" /></div
