[0824] team_board 연결

--- a/share_info/templates/share_info/inforepost.html
+++ b/share_info/templates/share_info/inforepost.html
@@ -57,7 +57,7 @@
               <div class="dept">
                 <p>전공 선택</p>
                 <select name="major" id="input-dropdown">
-                  <option disabled value="">전공을 선택해주세요. ▼</option>
+                  <option selected disabled value="">전공을 선택해주세요. ▼</option>
                   <optgroup label="글로벌융합대학">
                     <option value="국어국문학전공">국어국문학전공</option>
                     <option value="일어일문학전공">일어일문학전공</option>
